--- a/olexam/exam/templates/exam/exam_admin.html
+++ b/olexam/exam/templates/exam/exam_admin.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Exam Admin Panel</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     </head>
     <body>
