--- a/olexam/exam/templates/exam/login.html
+++ b/olexam/exam/templates/exam/login.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>LOG IN - EXAM ADMIN</title>
 </head>
 <body>
+    <div class ='container'>
+        <div class='row'>
+            <div class='col-md-12'>
+                <h2 class='text-center' style='margin-top: 50px;  padding-bottom: 25px; border-bottom: 1px solid grey;'>Admin Login</h2>
+            </div>
 
+            <div class='col-md-12'>
+                <form method="post">
+                    {{form.as_p}}
+                    {% csrf_token %}
+                    <input type="submit" value="Log In">
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
